--- a/public/themes/admin/pages/tables/data.html
+++ b/public/themes/admin/pages/tables/data.html
@@ -1287,7 +1287,7 @@
         <script src="../../js/AdminLTE/demo.js" type="text/javascript"></script>
         <!-- page script -->
         <script type="text/javascript">
-            $(function() {
+            $(document).ready(function(){
                 $("#example1").dataTable();
                 $('#example2').dataTable({
                     "bPaginate": true,
